# kimage

./: CMakeLists.txt  LICENSE  build.bat  example.bat  test.bat
example/: CMakeLists.txt  bmp_sdl.cpp
include/: imagedata.hpp  imageprocessor.hpp  imagereader.hpp  kimage.hpp
include/imageprocessor/: bmp.hpp  error.hpp  unsupported.hpp
include/imagereader/: bmp.hpp
include/tools/: int_type.hpp  to_int.hpp
src/: imagedata.cpp  imageprocessor.cpp  imagereader.cpp  kimage.cpp
src/imageprocessor/: bmp.cpp  error.cpp  unsupported.cpp
src/imagereader/: bmp.cpp
src/tools/: int_type.cpp  to_int.cpp
test/: CMakeLists.txt  bmp.cpp  bmp_16bit.cpp  bmp_1bit.cpp  bmp_24bit.cpp  bmp_32bit.cpp  bmp_4bit.cpp  bmp_raw_data.cpp  dependency_injection.cpp
